@@ -21,7 +21,7 @@ TODO: read files in next_token()
 =cut
 
 .sub expand_input 
-  .param Hash  state    
+  .param pmc  state    
 
   .local string token_data, token_type  # current token data and type        
 
@@ -45,7 +45,7 @@ the text are just copied to the output.
 =cut
 
 .sub expand_token 
-  .param Hash  state    
+  .param pmc       state    
   .param string    token_type
   .param string    token_data
 
@@ -115,8 +115,8 @@ which might call expand_token (), which might call expand_macro().
 =cut
 
 .sub expand_macro 
-  .param Hash  state
-  .param Hash  symbol 
+  .param pmc  state
+  .param pmc  symbol 
 
   .local int expansion_level
   expansion_level = state['expansion_level']
@@ -158,7 +158,7 @@ TODO: distinguish between TOKEN_FUNC and TOKEN_WORD
 =cut
 
 .sub call_macro 
-  .param Hash      state
+  .param pmc       state
   .param pmc       symbol
   .param pmc       arguments
 
